2014-07-31  Per Bothner  <per@bothner.com>

	* kawa/expressions.scm: Some more utility functions and macros.

2014-07-22  Per Bothner  <per@bothner.com>

	* strings.scm (string-append/shared): Remove incorrect implementation
	in favor of srfi-13 version.

	* kawa/string-cursors.scm: New file implementing the 'string-cursor'
	API introduced in Chibi Scheme.
	* Makefile.am: Update accordingly.

2014-07-13  Per Bothner  <per@bothner.com>

	* kawa/expressions.scm: New R7RS-style module-name syntax.
	* rnrs/unicode.scm: Likewise.

2014-07-03  Per Bothner  <per@bothner.com>

	* syntax.scm (%string-format-enclosed-format): Handle $splice$ in
	enclosed expression in $string$.

	* numbers.scm (floor/, truncate/): New functions (from R7RS).

2014-07-02  Per Bothner  <per@bothner.com>

	* numbers.scm (exact-integer?): New function.
	(integer?): Some tweaks, including support for BigDecimal.

	Change 'character' type to be implemented using primitive 'int'.
	* characters.scm (char->integer. integer->char): These are now no-ops
	when optimized.
	(digit->char): Update.
	* ports.scm: Update conversions since character is no longer an object.
	(read-char, peek-char): Change return type of character-or-eof.
	(u8): Inline readByte from kawa.standard.readchar.
	* rnrs/unicode.scm: Update character/int conversions.
	* strings.scm: Likewise.
	Add validation hook for character comparions.
	* compile_misc.scm: Implement various validation hooks.

2014-07-01  Per Bothner  <per@bothner.com>

	* kawa/expressions.scm: Utilities for working with expressions.
	* system.scm (pipeProcessValidateApply): Move to compile_misc.scm.
	* compile_misc.scm: New file.
	(pipeProcessValidateApply): Moved and rewrite to use expression API.
	* Makefile.am: Update accordingly.

2014-06-30  Per Bothner  <per@bothner.com>

	* files.scm (copy-file): Re-write to be more efficient.
	Now byte-based so it handles binary files.

2014-06-07  Per Bothner  <per@bothner.com>
