@@ -1,5 +1,7 @@
 2014-07-31  Per Bothner  <per@bothner.com>
 
+	* lib-test.scm: Add test for string-cursor-for-each.
+
 	* sva42722.scm: New test for Savannah bug #42722
 	"Explicit type declaration, later instance? check issues".
 
