@@ -1,5 +1,8 @@
 2014-07-31  Per Bothner  <per@bothner.com>
 
+	* kawa/string-cursors.scm (string-cursor-move, string-cursor-for-each):
+	New functions.
+
 	* kawa/expressions.scm: Some more utility functions and macros.
 
 2014-07-22  Per Bothner  <per@bothner.com>
